1- Adaaptação para um marketplace